*Empty MediaWiki Message*

--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -1,17 +1,17 @@
-'''Brian O'Nolan''' ([[Yrsk]]: ''Brian Ó Nualláin''; [[5 oktober]] [[1911]] – [[1 april]] [[1966]]) was nen [[Yrland|yrsken]] skryver, toneelskryver en satirist. Hee wörd algemeyn eseen as een vöäranstånd figuur in [[postmodernisme|postmodernistiske]] [[literatuur]]. Syne [[engels|engelske]] böke, so as At Swim-Two-Birds en 'n Darden Polityman, skreyv hee under synen skryversnaam Flann O'Brien. Syne lange ryge satiriske [[column|nöälstükkes]] in de Irish Times en een [[keltisk]]talig book ''An Béal Bocht'' skreyv hee under de naam Myles na gCopaleen.
+'''Brian O'Nolan''' ([[Iers|yrsk]]: ''Brian Ó Nualláin''; [[5 oktober]] [[1911]] – [[1 april]] [[1966]]) was nen [[Ierlaand (laand)|yrsken]] skryver, toneelskryver en satirist. Hee wördt algemeyn eseen as een vöäranstånd figuur in [[postmodernisme|postmodernistiske]] [[literatuur]]. Syne [[engels|engelske]] böke, so as At Swim-Two-Birds en den Darden Policyman, skreyv hee under synen skryversnaam Flann O'Brien. Syne lange ryge satiriske [[column|nöälstükkes]] in de Irish Times en een [[keltisk]]talig book ''An Béal Bocht'' skreyv hee under de naam Myles na gCopaleen.
 
-O'Nolan syne böke hebbet een breyd antal leevhebbers an etrökken üm öäre bizarre humor en modernistiske metafikty. As skryver hüng O'Nolan slim up [[James Joyce]]. Toch keyk hee med een skel gesichte når Joyce syne verhearliking, dee vöäle uut de yrske skryvtradity oaverskaduwet. Dårvan sea hee es "Ik sweyre by God, as ik den naam Joyce noch eyn mål höyre kryg ik wisse 'n bruus üm 'n bek."
+O'Nolan syne böke hebbet een breyd antal leevhebbers an-etrökken üm öäre bizarre humor en modernistiske metafikty. As skryver hüng O'Nolan slim up [[James Joyce]]. Toch keyk hee med een skel gesichte når Joyce syne verheyrliking, dee vöäle uut de yrske skryvtradity oaverskaduwt. Dårvan sea hee es "Ik sweare by God, as ik den name Joyce noch eyn mål höyre kryg ik wisse den bruus üm den bek."
 
-O'Nolan was et grötste deyl van syn leaven alkoholist en knoyeden up latere leyvtyd med syne gesundheid.<ref>[https://books.google.com/books?id=5cSkSB13ZQcC&pg=PA798&lpg=PA798&dq=brian+o'nolan+evelyn+1966#PPA799,M1 Gale Steven H. ed. "O'Nolan, Brian." Encyclopedia of British Humorists: Geoffrey Chaucer to John Cleese.] Vol.2 (L-W). 1996, [[Garland Publishing]], New York/London . ISBN 978-0-8240-5990-3. p798</ref> Hee kreyg hals[[kanker]] en störv an nen härtanval up [[1 april]] [[1966]].<ref>[http://www.irishtimes.com/newspaper/ireland/2011/1001/1224305062293.html Micheál Ó Nualláin. The Brother: memories of Brian The Irish Times, 1 October 2011.] Bekeaken up 1 October 2011.</ref>
+O'Nolan was et grötste deyl van syn leaven alkoholist en knoiden up latere leavtyd med syne gesundheid.<ref>[https://books.google.com/books?id=5cSkSB13ZQcC&pg=PA798&lpg=PA798&dq=brian+o'nolan+evelyn+1966#PPA799,M1 Gale Steven H. ed. "O'Nolan, Brian." Encyclopedia of British Humorists: Geoffrey Chaucer to John Cleese.] Vol.2 (L-W). 1996, [[Garland Publishing]], Ny-York/Londen . ISBN 978-0-8240-5990-3. p798</ref> Hee kreyg hals[[kanker]] en störv an nen härtanval up [[1 april]] [[1966]].<ref>[http://www.irishtimes.com/newspaper/ireland/2011/1001/1224305062293.html Micheál Ó Nualláin. The Brother: memories of Brian The Irish Times, 1 oktober 2011.] Bekeaken up 1 oktober 2011.</ref>
 
-==Leyvensloup==
+==Leavensloup==
 
 ===Skooltyd===
-O'Nolan güng når Blackrock College wår hee engelsk leyreden van de höyvdmeister en tokumstige [[aartsbiskup]] [[John Charles McQuaid]].<ref>[http://catalogue.nli.ie/Record/vtls000029328 Farragher, Sean. Wyer, "Annrao. Blackrock College 1860-1995". Dublin, Paraclete Press (1995). ISBN 0946639191.</ref>
+O'Nolan güng når Blackrock College wår hee engelsk leyreden van de höyvdmeister en tokumstige [[aartsbiskop]] [[John Charles McQuaid]].<ref>[http://catalogue.nli.ie/Record/vtls000029328 Farragher, Sean. Wyer, "Annrao. Blackrock College 1860-1995". Dublin, Paraclete Press (1995). ISBN 0946639191.</ref>
 
 Farragher en Wyer skryvet et volgende:
 
-Dr McQuaid himself stünd bekend as een uutsteakend engelskleyraar. Doo as hee een mål nit in de klasse was, deyd eyne van syne leyrlingen, Brian O'Nolan, rechtevoort bekend as Myles na gCopaleen, grootspreaken teagen de rest van de klasse dat der mär twey lüde in de skole warren dee fatsoonlik engelsk kunnen skryven, namelik Dr. McQuaid en heeselv. Se warren et unmiddellik med üm eyns. En Dr. McQuaid beweys Myles de eyre dat hee een klein gedicht van üm upnöäm in de eyrste uutgave van de vernyde College Annual (1930) - dit was Myles' eyrste uutegeaven stükke.<ref>[https://seamussweeney.wordpress.com/2016/05/01/flann-obriens-english-teacher-john-charles-mcquaid/ Séamus Sweeney Blog. "Flann O'Brien's English Teacher: John Charles McQuaid.] Skreaven up 1 mei 2016. Bekeaken up 1 november 2016.</ref>
+Dr McQuaid himself stünd bekend as een uutsteakend engelskleyraar. Do as hee een mål nit in de klasse was, deyd eyne van syne leyrlingen, Brian O'Nolan, rechtevoord bekend as Myles na gCopaleen, groutspreaken teagen de rest van de klasse dat der mär twey lüde in de skole warren dee fatsoonlik engelsk kunnen skryven, namelik Dr. McQuaid en heeselv. Se warren et unmiddellik med hüm eyns. En Dr. McQuaid beweys Myles de eyre dat hee een klein gedicht van hüm upnöäm in de eyrste uutgave van de vernyde College Annual (1930) - dit was Myles' eyrste uutegeaven stükke.<ref>[https://seamussweeney.wordpress.com/2016/05/01/flann-obriens-english-teacher-john-charles-mcquaid/ Séamus Sweeney Blog. "Flann O'Brien's English Teacher: John Charles McQuaid.] Skreaven up 1 mei 2016. Bekeaken up 1 november 2016.</ref>
 
 et värsken selv, "Ad Astra", geyt so:
 <blockquote>
@@ -29,22 +29,25 @@ Den eandelosen blik my ducht<br>
 de Eywigheid untrolled.
 </blockquote>
 
-O'Nolan spandeyreden syne skooljåren ouk deyls an de Synge Street Christian Brothers School. Syn book [[The Hard Life]] is ne halv-autobiografiske beskryving van syne beleyving van de Christenbröyrs.
+O'Nolan spandeerden syne skooljåren ouk deyls an de Synge Street Christian Brothers School. Syn book [[The Hard Life]] is ne halv-autobiografiske beskryving van syne beleaving van de christenbröders.
 
 ===Studentenjåren===
-O'Nolan was een druk baasman in syne studententyd an [[University College, Dublin]] (UCD). Dår was hee een aktiv en vöälbespröäken lid van de in dee tyd bekende ''Literary and Historical Society''. Hee skreav vöär et studentenblad ''Comhthrom Féinne'' (''Earlik Spöl'') under verskeidene skuulnaams, mär vöäral as ''Brother Barnabas''. Upmarkelikerwys skreav hee doomåls een verhaal med de naam "Scènes in een roman van Brother Barnabas (miskyn wal nå synen dood)", wårin vöäle van syne ideyen en tema's når vöärten kummet dee as hee later ouk in syn book ''At Swim-Two-Birds'' gebrukt. In et verhaal wörd den sogenaamden autöör van et verhaal stöädig teagenwarked döär syne eygene karakters. Dee keset vastbeslöäten öär eygene weg, wo hoge of laege 'n skryver ouk springt. Den bandyt van et verhaal, eyne Carruthers McDaid, den as 'n skryver bedoold had as et laegste van et laegste soort misdådiger, "den as geleidelik mus afsakken töt et butenste uuteynde van de menskelike rottigheid," vindet in steade dårvan een modaal inkummen med de verkoop van katten an öldere vrowlüde en wörd nen heymeliken karkenganger, sunder toostemming van de skryver. Underwyl keset Shaun Svoolish, den beoogden held van et verhaal, vöär een händig en gemakkelik leaven sunder romantik en heldendåden:
+O'Nolan was een druk baasman in syne studententyd an [[University College, Dublin]] (UCD). Dår was hee een aktiv en vöälbespröäken lid van de in dee tyd bekende ''Literary and Historical Society''. Hee skreav vöär et studentenblad ''Comhthrom Féinne'' (''Earlik Spöl'') under verskeidene skuulnaams, mär vöäral as ''Brother Barnabas''. Upmarkelikerwys skreav hee domåls een verhaal med de name "Scènes in een roman van Brother Barnabas (miskyn wal nå synen doud)", wårin vöäle van syne ideen en temas når vöärten kummet dee as hee later ouk in syn book ''At Swim-Two-Birds'' gebruukt. In et verhaal wördt den sogenaamden autöör van et verhaal stöädig teagenwarked döär syne eygene karakters. Dee keest vastbeslöäten öär eygene weg, wo houge of laege den skryver ouk springt. Den bandyt van et verhaal, eyne Carruthers McDaid, den as den skryver bedoold had as et laegste van et laegste soort misdådiger, "den as geleidelik mos afsakken töt et butenste uutende van de menskelike rottigheid," vindt in steade dårvan een modaal inkummen med de verkoup van katten an öldere vrouwlüde en wördt nen heymeliken karkenganger, sunder tostemming van de skryver. Underwyl keest Shaun Svoolish, den beougden held van et verhaal, vöär een händig en gemakkelik leaven sunder romantik en heldendåden:
 
-:'Ik mag dan wan nen börgerliken kül weasen,' antwoorden hee, 'mer ik weate gewoon wat ik gaerne hebbe. Wårüm mag ik nit med Bridie trowen en et es by de ambtenarye proberen?'
-:'Ungelükken by et spoor sint gelükkig seldsaam,' sea ik uuteyndelik, 'mär as se geböäret, sint se verskrikkelik. Denkt der noch es oaver.'
+:'Ik mag dan wal nen börgerliken kül weasen,' antwoordden hee, 'mär ik weate gewoan wat ik gaerne hebbe. Wårüm mag ik nit med Bridie trouwen en et es by de ambtenarye proberen?'
+:'Ungelükken by et spour sint gelükkig seldsaam,' sea ik uutendelik, 'mär as se geböäret, sint se verskrikkelik. Denkt der noch es oaver.'
 
-In 1934 stichteden O'Nolan en syne medstudenten een tydskrivt ''Blather'', dat et nit lange volhöälden. De skryvsels dårin, med düdelike kenmarken van jöögdelike selvoaverskatting, låt alwear wat van O'Nolan's latere wark seen. Dit mål wyset se når de styl van syne latere ''Cruiskeen Lawn''-kolumns as Myles na gCopaleen:
+In 1934 stichteden O'Nolan en syne medstudenten een tydskrivt ''Blather'', dat et nit lange vulhöälden. De skryvsels dårin, med düdelike kenmarken van jöägdelike selvoaverskatting, låt alweader wat van O'Nolans latere wark seen. Dit mål wyset se når de styl van syne latere ''Cruiskeen Lawn''-kolumns as Myles na gCopaleen:
 
-:Hyr is ''Blather''. Terwyl as wy vöärwaerts skrydet üm unsen büging te maken, spüür y vergeavens når teakenen van underdånigheid of når eanig bewys van een verlangen üm te pleseren. Wy sint een selvingenöämen en verdörven grup kearls. Wy sint so gröyts as bantamhanen en ydel as pauwen.
+:Hyr is ''Blather''. Terwyl as wy vöärwaerds skrydet üm unsen büging te maken, spöär y vergeavens når teykenen van underdånigheid of når eynig bewys van een verlangen üm te pleseren. Wy sint een selvingenöämen en verdörven grup kearls. Wy sint so gröyts as bantamhanen en ydel as pauwen.
 
-:''Blather'' interesseyret sik niks. Nen sardonisken lach untsköt uns terwyl wy büget, wreyde en cyniske hunde dee as wy sint. Et is nen verskrikkeliken lach, nen lach van verlöärene kearls. Ruuk y de lucht van swår beer?
+:''Blather'' interesseert sik niks. Nen sardonisken lach untsküt uns terwyl wy büget, wreade en cyniske hunde dee as wy sint. Et is nen verskrikkeliken lach, nen lach van verlöärene kearls. Ruuk y de lucht van swår beer?
 
-O'Nolan, den as [[duuts|düütsk]] in [[Dublin]] studeyreden, kan tenminsten deylen van [[1933]] en [[1934]] in [[Duutsland|Düütskland]] eweasd hebben, vöärnamelik in [[Köln]] en [[Bonn]], mär details sint unseaker en vöälbespröäken. In [[1965]] beweyreden hee selv dat hey "vöäle månden in et [[Rijnland|Rynland]] en Bonn döärbrachten, sikselv afdryvend van de strikte nåjacht van study." töt vandage is der gin unafhankelik bewys vöär dissen uutvlucht (of vöär syn selvverklårde hüwelik med eyne 'Clara Ungerland' uut Köln). In öäre biografy van O'Nolan bespreaket Costello en Van de Kamp et halvslachtige bewys. See segt "...dat et in afweysigheid van slutend bewys een mystery ümgeaven döär giswark sal blyven, up sikselv representativ vöär de andere mysterys in et leyven van Brian O'Nolan dee den undersöker noch altyd uutdaget."<ref>Costello, Peter en Van de Kamp, Peter. "Flann O'Brien – An Illustrated Biography." London, UK. Bloomsbury 1987. ISBN 0-7475-0129-7. bls. 45–50.</ref>
+O'Nolan, den as [[duuts|düütsk]] in [[Dublin]] studeerden, kan tenminsten deylen van [[1933]] en [[1934]] in [[Duutsland|Düütskland]] eweasd hebben, vöärnamelik in [[Köln]] en [[Bonn]], mär details sint unseaker en vöälbespröäken. In [[1965]] bewäärden hee selv dat hee "vöäle månden in et [[Rijnland|Rynland]] en Bonn döärbrachten, sikselv afdryvend van de strikte nåjacht van study." töt vandage is der gin unafhankelik bewys vöär dissen uutvlucht (of vöär syn selvverklårde hüwelik med eyne 'Clara Ungerland' uut Köln). In öäre biografy van O'Nolan bespreaket Costello en Van de Kamp et halvslachtige bewys. See segt "...dat et in afweysigheid van slutend bewys een mystery ümgeaven döär giswark sal blyven, up sikselv representativ vöär de andere mysterys in et leaven van Brian O'Nolan dee den undersöker noch altyd uutdaagt."<ref>Costello, Peter en Van de Kamp, Peter. "Flann O'Brien – An Illustrated Biography." London, UK. Bloomsbury 1987. ISBN 0-7475-0129-7. bls. 45–50.</ref>
 
+==Referensys==
+<references/>
 
-[[Kategorie: Tweants artikel]]
+{{Dialekt|twd|Ryssen|Nysassiske Skryvwyse}}
+
 [[Kategorie: Yrsken skryver]]
