*Empty MediaWiki Message*

--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -50,4 +50,4 @@ O'Nolan, den as [[duuts|düütsk]] in [[Dublin]] studeerden, kan tenminsten deyl
 
 {{Dialekt|twd|Ryssen|Nysassiske Skryvwyse}}
 
-[[Kategorie: Yrsken skryver]]
+[[Kategorie:Ierse schriever]]
