*Empty MediaWiki Message*

--- a/Monte_Águila.mw
+++ b/Monte_Águila.mw
@@ -1,6 +1,5 @@
-[[Bestaand:Monte_1.jpg|duum|250x250px|Monte Aguila]]
-'''Monte Aguila''' (in t [[Spoans]] '''Monte Águila''') is mit sikkom 6.090 inwoners (6.090 in 2002, bron: INE) de grootste [[Stad (woonstee)|stad]] in t zuden van [[Chili]].
-
+[[Bestaand:Monte_1.jpg|duum|250x250px|Monte Águila]]
+'''Monte Águila''' is een [[Chili|chileenske]] stad in de [[gemiente|gemeynde]] [[Cabrero]], dat deyl uutmaakt van de regio [[Biobío]]. Et hevt ungevear 6.090 inwoaners (bron: INE, 2002).
 
 <gallery mode="packed">
 Bestaand:Inauguracion Nueva Plaza de Monte Aguila 2017 (12).jpg
@@ -8,10 +7,10 @@ Bestaand:Inauguracion Nueva Plaza de Monte Aguila 2017 (14).jpg
 Bestaand:Inauguracion Nueva Plaza de Monte Aguila 2017 (63).jpg
 </gallery>
 
-== Uutgaonde verwiezingen ==
-
-* [http://www.monteaguila.cl/ Monteaguila.cl]
+== Uutgånde verwysingen ==
 {{commons|Chile}}
+* [http://www.monteaguila.cl/ Monteaguila.cl]
 
-[[Kategorie:Grunnegs artikel]]
+{{Dialekt|stl||Nysassiske Skryvwyse}}
+
 [[Kategorie:Stad in Chili]]
