*Empty MediaWiki Message*

--- a/Woudrichem_(veurmaolige_gemeente).mw
+++ b/Woudrichem_(veurmaolige_gemeente).mw
@@ -18,20 +18,19 @@ netnummer = 0183 |
 postkode = 4280-4288 |
 webstie = [http://www.woudrichem.nl/ www.woudrichem.nl]|
 }}
+[[Bestaand:Woudrichem_karkjen.jpg|thumb|Karkjen in Woudrichem]]
+'''Woudrichem''' ([[Broabants|Braobants]]: ''Woerkem'' of ''Woerkum'') is ne veurmaolige [[gemiente (bestuur)|gemeente]] mit 14.375 inwonners (1 febrewaori 2008, bron: CBS) en besteet naost [[Woudrichem (stad)|Woudrichem]] uut de darpen [[Almkerk]], [[Andel]], [[Giessen (Woudrichem)|Giessen]], [[Oldendiek (Noord-Broabant)|Oldendiek]], [[Rieswiek (Noord-Broabant)|Rieswiek]], [[Uutwiek]], [[Uppel]] en [[Weerdhuze]]. Daornaost bunt daor enkele naoberschoppen waorunder Dartienmörn, Steenheul, Den Eng en Zandwiek in de gemeente. 
 
-'''Woudrichem''' ([[Broabants]]: ''Woerkem'' of ''Woerkum'') is ne [[gemiente (bestuur)|gemeente]] mit 14.375 inwonners (1 febrewoari 2008, bron: CBS) en besteet noast [[Woudrichem (stad)|Woudrichem]] uut de darpen [[Almkerk]], [[Andel]], [[Giessen (Woudrichem)|Giessen]], [[Oldendiek (Noord-Broabant)|Oldendiek]], [[Rieswiek (Noord-Broabant)|Rieswiek]], [[Uutwiek]], [[Uppel]] en [[Weerdhuze]]. Doarnoast bunt doar enkele noaberschoppen woarunder Dartienmörn, Steenheul, Den Eng en Zandwiek in de gemeente. 
-
-==Uutgoande verwiezingen==
+==Uutgaonde verwiezingen==
 * [http://www.woudrichem.nl Webstea gemeente Woudrichem]
 * [http://www.toeristeninfo-woudrichem.nl/ Toeristeninfo Woudrichem]
 * [http://www.veerdienstgorinchem.nl/Gor-Woudrichem.htm Veerdienst Gorinchem-Woudrichem]
 * [http://www.visserijdagen-woudrichem.nl Visseri-jdage]
 
-==Galleri-je==
-<gallery>
-Ofbeelding:Woudrichem_karkjen.jpg|Karkjen in Woudrichem
-Ofbeelding:Woudrichem_karke.jpg|Anzicht op Woudrichem
-</gallery>
+== Topografie ==
+[[Bestaand:Gem-Woudrichem-OpenTopo.jpg|530px]]
+
+''Topografische gemeentekaarte van Woudrichem, per meert 2017''
 
 {{Noord-Braobant}}
 
