*Empty MediaWiki Message*

--- a/Woudrichem_(veurmaolige_gemeente).mw
+++ b/Woudrichem_(veurmaolige_gemeente).mw
@@ -1,4 +1,4 @@
-{{Gemeante |
+{{Veurmaolige Gemeante |
 naam = Woudrichem |
 bestaandsnaam vlagge = Flag_of_Woudrichem.png |
 bestaandsnaam woapn = Coat of arms of Woudrichem.png |
@@ -35,4 +35,4 @@ webstie = [http://www.woudrichem.nl/ www.woudrichem.nl]|
 {{Noord-Braobant}}
 
 [[Kategorie:Achterhooks_artikel]]
-[[Kategorie:Gemeente in Noord-Braobant]]
+[[Kategorie:Vroggere gemaente in Noord-Braobant]]
