*Empty MediaWiki Message*

--- a/Woudrichem_(veurmaolige_gemeente).mw
+++ b/Woudrichem_(veurmaolige_gemeente).mw
@@ -1,4 +1,4 @@
-{{Veurmaolige Gemeante |
+{{Gemeante |
 naam = Woudrichem |
 bestaandsnaam vlagge = Flag_of_Woudrichem.png |
 bestaandsnaam woapn = Coat of arms of Woudrichem.png |
