*Empty MediaWiki Message*

--- a/Oalborg.mw
+++ b/Oalborg.mw
@@ -1,7 +1,9 @@
 [[Bestaand:Gem-Aalburg-OpenTopo.jpg|thumb|right|200px|Gemeentekaarte van Oalborg]]
 [[Bestaand:Netherlands,_Noord-Brabant,_Veen (1).JPG|thumb|right|200px|Zicht op Venne en den Ofdamden Maas, bekekken vanof Aalst (Geelderlaand).]]
 
-'''Oalborg''' of '''Oalburg''' ([[Nederlaands|Hollaands]]: ''Aalburg'') is ne [[gemeente]] in et [[Laand van Altena]] in de [[proveensie]] [[Noord-Broabaant]] in [[Nederlaand]]. Der woonden op n [[31 meert|31sten meart]] van [[2015]] 12.979 inwonners op ne vlakte van 53,16 kilometer in et veerkaant, met 273 [[hectare|ha]] an water.
+'''Oalborg''' of '''Oalburg''' ([[Nederlaands|Hollaands]]: ''Aalburg'') is ne vuurmoalige [[gemeente]] in et [[Laand van Altena]] in de [[proveensie]] [[Noord-Broabaant]] in [[Nederlaand]]. Der woonden op n [[31 meert|31sten meart]] van [[2015]] 12.979 inwonners op ne vlakte van 53,16 kilometer in et veerkaant, met 273 [[hectare|ha]] an water.
+
+Per [[1 jannewaori|1 jannewoari]] [[2019]] is et samen mit de vuurmoalige gemeenten [[Warkendam]] en [[Woudrichem (veurmaolige gemeente)|Woudrichem]] upgoan in de nieje gemeente [[Altena (Noordbråbant)|Altena]].
 
 ==Döarpe==
 In de gemeente ligt de volgende döarpe en wonkernen.
@@ -51,12 +53,12 @@ Noa de gemeenteroadsverkiezingen van 2014 wörd der een verboond eslötten tuske
 
 ==Anliggende gemeenten==
 {{Tabel wiendroze
-| NW= [[Woudrichem (gemeente)|Woudrichem]]
-| N= 
-| NO= [[Zaltbommel]] (GLD)
-| W= [[Woarkendam]]
-| O= 
-| ZW= 
+| NW= 
+| N= [[Hardinxveld-Giessendam]] (ZH)<br/>[[Gorkum]] (ZH)
+| NO= 
+| W= [[Dordrecht]] (ZH)
+| O= [[Zaltbommel]] (GLD)
+| ZW= [[Geertrudenbarg]]<br/>[[Drimmelen]]
 | Z= [[Woalwiek]]
 | ZO= [[Heusden]]
 }}
@@ -76,4 +78,4 @@ In de gemeente stoat een antal rieksmonumeanten en oorlogsgedeanken, zeet:
 {{Noord-Braobant}}
 
 [[Kategorie:Tweants artikel]]
-[[Kategorie:Gemeente in Noord-Braobant]]
+[[Kategorie:Vroggere gemaente in Noord-Braobant]]
