/* Gemienten en heufdplakken */ update

--- a/Frieslaand.mw
+++ b/Frieslaand.mw
@@ -94,22 +94,20 @@ De tien grootste woonplakken in de perveensie naor et antal inwoners op [[1 febr
 == Gemienten en heufdplakken ==
 ''(Op de Nedersaksische Wikipedie wodden de Stellingwarfse naemen bruukt)''
 
-De perveensie Frieslaand het 20 gemienten en heufdplakken:
+De perveensie Frieslaand het 18 gemienten en heufdplakken:
 
 {|
 |
 # [[Achtkarspelen]] - [[Butenpost]]
-# [[Amelaand]] (''Amerland'') - [[Ballum]]
+# [[Amelaand]] (''Ameland'') - [[Ballum]]
 # [[Dantemediel]] (''Dantumadiel'') - [[Damwoolde]]
 # [[De Friese Meren]] (''De Fryske Marren'') - [[De Jouwer]]
-# [[Dongerediel]] (''Dongeradeel'') - [[Dokkum]]
 # [[Et Vene (gemiente)|Et Vene]] (''Heerenveen'') - [[Et Vene (plak)|Et Vene]]
-# [[Ferwerderediel]] (''Ferwerderadiel'') - [[Ferwerd]]
 # [[Harlingen (gemiente)|Harlingen]] - [[Harlingen (stad)|Harlingen]]
-# [[Kölmerlaand en Nijkruuslaand|Kollumerlaand en Ni'jkruuslaand]] (''Kollumerland en Nieuwkruisland'') - [[Kollum]]
 # [[Liwwadden (gemiente)|Liwwadden]] (''Leeuwarden'') - [[Liwwadden (stad)|Liwwadden]]
-|<ol start="11">
-<li> [[Ooststellingwarf]] (''Ooststellingwerf'') - [[Oosterwoolde]]
+# [[Noordoost-Frieslaand]] (''Noardeast-Fryslân'') - [[Dokkum]]
+# [[Ooststellingwarf]] (''Ooststellingwerf'') - [[Oosterwoolde]]
+|<ol start="10">
 <li> [[Opsterlaand]] (''Opsterland'') - [[Beetsterzwaog]]
 <li> [[Schiermonnikoog]] - [[Schiermonnikoog (plak)|Schiermonnikoog]]
 <li> [[Smallingerlaand]] (''Smallingerland'') - [[Drachten]]
