--- a/Gelderlaand.mw
+++ b/Gelderlaand.mw
@@ -48,8 +48,8 @@ Hieronder vie'j n overzichte van de grootste Gelderse stejen (naor t antal inwoe
 # [[Deutekem]]
 
 == Gemeenten ==
-[[Bestaand:2018-P05-Gelderland.jpg|thumb|300px|Provinsie Gelderlaand (2018) mit indeling van gemeenten en impressie van t laandschap.]]
-Der bint in totaal 53 gemeentes.
+[[Bestaand:Prov-Gelderland-OpenTopo.jpg|thumb|300px|Provinsie Gelderlaand (2019) mit indeling van gemeenten en impressie van t laandschap.]]
+Der bint in totaal 51 gemeentes.
 
 {|
 |
@@ -70,28 +70,25 @@ Der bint in totaal 53 gemeentes.
 # [[Doezebarg]] (''Doesburg'')
 # [[Druten]]
 # [[Duve (gemeente)|Duve]] (''Duiven'')
-# [[Ee (gemeente)|Ede]]
-|<ol start="19">
+|<ol start="18">
+<li> [[Ee (gemeente)|Ede]]
 <li> [[Elburg]]
 <li> [[Epe]]
-<li> [[Geldermalsen]]
 <li> [[Harderwiek]] (''Harderwijk'')
 <li> [[Heerde]]
 <li> [[Heumen]]
-<li> [[Lingewaal]]
 <li> [[Lingeweerd]] (''Lingewaard'')
 <li> [[Lochem]]
 <li> [[Maasdriel]]
 <li> [[Montferland]]
 <li> [[Neder-Betuwe]]
-<li> [[Neerijnen (gemeente)|Neerijnen]]
 <li> [[Niekark]] (''Nijkerk'')
 <li> [[Nimwaege|Nijmegen]] (''Nijmegen'')
 <li> [[Nunspeet]]
 <li> [[Olde Iesselstreek]] (''Oude IJsselstreek'')
 <li> [[Oldebroek]]
-|<ol start="37">
 <li> [[Oost Gelre]]
+|<ol start="35">
 <li> [[Overbetuwe]]
 <li> [[Putten]]
 <li> [[Renkum]]
@@ -102,6 +99,7 @@ Der bint in totaal 53 gemeentes.
 <li> [[Voorst (gemeente)|Voorst]]
 <li> [[Wageningen]]
 <li> [[Wenters|Wenters<small>(</small>wiek<small>)</small>]] (''Winterswijk'')
+<li> [[West Betuwe]]
 <li> [[West Maas en Waal]]
 <li> [[Westervoort]]
 <li> [[Wiechen]] (''Wijchen'')
