--- a/Grunnen_(provìnzie).mw
+++ b/Grunnen_(provìnzie).mw
@@ -123,30 +123,22 @@ Wieders is n groot kultureel zentrum van de provìnzie t [[Grunneger Museum]]. D
 t Kultureel aarfgoud en aander zainsweerdegheden as t Naasjonoalpaark [[Laauwersmeer]], de [[Hortus]] in Hoaren en de natuur in [[Westerwoolde (streek)|Westerwolde]] vörmen de belaankriekste rezens veur toeristen om noar de provìnzie Grunnen te kommen. 
 
 == Gemaintes ==
-[[Ofbeelding:2018-P01-Groningen.jpg|250px|right|thumb|Gemaintes in Grunnen (20)]]
+[[Ofbeelding:Prov-Groningen-OpenTopo.jpg|250px|right|thumb|Gemaintes in Grunnen (2019)]]
 {|
 |
-# [[Beem]]  (''Bedum'')   
 # [[n Daam]] (''Appingedam'')  
 # [[De Pekel]]  (''Pekela'')  
-# [[Delfziel]]  (''Delfzijl'')  
-# [[Emsmond]]  (''Eemsmond'')  
-# [[Grodegast]]  (''Grootegast'')  
-# [[Hoaren (gemainte)|Hoaren]] (''Haren'')   
+# [[Delfziel]]  (''Delfzijl'') 
+# [[t Hoogelaand]] (''Het Hogeland'') 
 # [[Knoal (gemainte)|Knoal]] (''Stadskanaal'')  
-# [[Leek (Grunnen)|Leek]]
 # [[Loppersom (Grunnen)|Loppersom]]  (''Loppersum'')  
-|<ol start="11">
-<li> [[Marne]]  (''De Marne'')  
+|<ol start="7">
 <li> [[Midden-Grunnen]]  (''Midden-Groningen'')  
-<li> [[Moarum]]  (''Marum'')  
 <li> [[Oldambt (gemainte)|Oldambt]]
 <li> [[Grunnen (gemainte)|Stad]]  (''Groningen (stad)'')  
-<li> [[Ten Boer]]
 <li> [[Veendaam (gemainte)|Veendaam]]  (''Veendam'')  
+<li> [[Westerkertier (gemainte)|Westerkertier]]  (''Westerkwartier'')  
 <li> [[Westerwoolde (gemainte)|Westerwoolde]]  (''Westerwolde'')  
-<li> [[Winzum (Grunnen)|Winzum]]  (''Winsum'')  
-<li> [[Zuudhörn]]  (''Zuidhorn'')  
 |
 |}
 
