--- a/Limburg_(Nederlaand).mw
+++ b/Limburg_(Nederlaand).mw
@@ -48,6 +48,7 @@ Limburg bestiet uut 14 plaotsen mit stadsrechten.
 |
 # [[Bargen (Limburg)|Bargen]] (''Bergen'')
 # [[Baek (gemeente)|Beek]]
+# [[Beekdaelen]]
 # [[Beesel]]
 # [[Brunssem]]
 # [[Echt-Susteren]]
@@ -61,16 +62,13 @@ Limburg bestiet uut 14 plaotsen mit stadsrechten.
 # [[Leudal (gemeente)|Leudal]]
 # [[Maasgouw]]
 # [[Maastricht]]
-# [[Meerssen (Limburg)|Meerssen]]
-# [[Mook en Middelaor]] (''Mook en Middelaar'')
-| <ol start="18">
+| <ol start="17">
+<li> [[Meerssen (Limburg)|Meerssen]]
+<li> [[Mook en Middelaor]] (''Mook en Middelaar'')
 <li> [[Nederweert]] 
-<li> [[Nuth (gemeente)|Nuth]]
-<li> [[Onderbanken]]
 <li> [[Peel en Maas]]
 <li> [[Roerdalen]]
 <li> [[Roermond]]
-<li> [[Schinnen (gemeente)|Schinnen]]
 <li> [[Simpelveld]]
 <li> [[Sittard-Geleen]]
 <li> [[Stein]]
