--- a/Noord-Braobant.mw
+++ b/Noord-Braobant.mw
@@ -19,6 +19,7 @@ volksleed = gien |
 ofbeeldn =  Noord Brabant-Position.png |
 Webstea = [http://www.brabant.nl www.brabant.nl] |
 }}
+[[Bestaand:Prov-Noord-Brabant-OpenTopo.jpg|thumb|Noord-Braobant]]
 
 '''Noord-Braobant''' ([[Nederlaands|Nederlands]]: ''Noord-Brabant'', [[Braobaans|Braobants]]: ''Noord-Braobant'') is ne provinsie in t zuden van [[Nederlaand|Nederland]]. t Grenst an de Nederlandse provinsies [[Limburg (Nederlaand)|Limburg]], [[Gelderlaand|Gelderland]], [[Zuud-Hollaand|Zuud-Holland]] en [[Zeelaand|Zeeland]] en an de [[België|Belgiese]] provinsies [[Antwaarp (provinzie)|Antwarpen]] en [[Limburg (België)|Limburg]].
 
