--- a/Noord-Hollaand.mw
+++ b/Noord-Hollaand.mw
@@ -19,6 +19,7 @@ volkslaid = [[Ik houd van het groen in je wei|Ik houd van het<br />groen in je w
 ofbeelden =  Noord Holland-Position.png |
 webstee = [http://www.noordholland.nl www.noordholland.nl] |
 }}
+[[Bestaand:Prov-Noord-Holland-OpenTopo.jpg|thumb|Noord-Hollaand]]
 
 '''Noord-Hollaand''' ([[Nederlaands|Nederlaans]]: ''Noord-Holland'', [[Westfries]]: ''Noard-Holland'') is een [[Nederlaand|Nederlaanse]] [[pervincie|perveensie]] in et noordwesten van et laand. De heufdstad is [[Haarlem]]. De perveensie het zoe'n 2,6 miljoen inwoners en de grootste stad is [[Amsterdam]] wat ok de heufdstad van Nederlaand is.
 
@@ -49,7 +50,6 @@ In et zuden van et IJ liggen de stedelike gebieden van [[Amsterdam]], [[Haarlem]
 #[[Gooise Meren]]
 | <ol start="17">
 <li>[[Haarlem]]
-<li>[[Haarlemmerleede en Spaornwolde|Haarlemmerliede en Spaernwoolde]]<br/ > (''Haarlemmerliede en Spaarnwoude'')
 <li>[[Haarlemmermeer]]
 <li>[[Heemskarke]] (''Heemskerk'')
 <li>[[Heemstede (Noord-Hollaand)|Heemstede]]
@@ -64,8 +64,8 @@ In et zuden van et IJ liggen de stedelike gebieden van [[Amsterdam]], [[Haarlem]
 <li>[[Langediek]] (''Langedijk'')
 <li>[[Loaren (Noord-Hollaand)|Laoren]] (''Laren'')
 <li>[[Medemblik]]
-| <ol start="33">
 <li>[[Older-Amstel|Oolder-Amstel]] (''Ouder-Amstel'')
+| <ol start="33">
 <li>[[Oostzaan]]
 <li>[[Opmeer]]
 <li>[[Purmerend]]
