--- a/Utrecht_(provinsie).mw
+++ b/Utrecht_(provinsie).mw
@@ -26,7 +26,7 @@ webstee = [http://www.provincie-utrecht.nl www.provincie-utrecht.nl] |
 In de plaotsen [[Bunsjoten]], [[Spaokenburg]], [[Leusden]] en Amersfoort worren oorspronkelik [[West-Veluws]]e en [[Eemlangds]]e dialekten espreuken.
 
 == Gemeenten ==
-[[File:2016-P06-Utrecht-o.png|thumb|300px|left|Gemeenten in Utrecht]]
+[[File:Prov-Utrecht-OpenTopo.jpg|thumb|300px|left|Gemeenten in Utrecht]]
 Overzicht van de Utrechtse gemeenten.
 {|
 |
@@ -52,7 +52,7 @@ Overzicht van de Utrechtse gemeenten.
 <li>[[Utrecht (stad)|Utrecht]]
 <li>[[Utrechtse Heuvelrug (gemeente)|Utrechtse Heuvelrug]]
 <li>[[t Veen]] (''Veenendaal'')
-<li>[[Vianen]]
+<li>[[Vijfheerenlanden]]
 <li>[[Wiek bi-j Duurstee|Wiek bie Duurstede]]<br/ > (''Wijk bij Duurstede'')
 <li>[[Woerden]]
 <li>[[Wombaarg]] (''Woudenberg'')
