--- a/Utrecht_(provinsie).mw
+++ b/Utrecht_(provinsie).mw
@@ -52,7 +52,7 @@ Overzicht van de Utrechtse gemeenten.
 <li>[[Utrecht (stad)|Utrecht]]
 <li>[[Utrechtse Heuvelrug (gemeente)|Utrechtse Heuvelrug]]
 <li>[[t Veen]] (''Veenendaal'')
-<li>[[Vijfheerenlanden]]
+<li>[[Viefhearenlaanden]] (''Vijfheerenlanden'')
 <li>[[Wiek bi-j Duurstee|Wiek bie Duurstede]]<br/ > (''Wijk bij Duurstede'')
 <li>[[Woerden]]
 <li>[[Wombaarg]] (''Woudenberg'')
