--- a/Flevolaand.mw
+++ b/Flevolaand.mw
@@ -19,6 +19,8 @@
 | region = NL-FL
 | webstee = http://www.flevoland.nl
 }}
+[[Bestaand:Prov-Flevoland-OpenTopo.jpg|thumb|Flevolaand]]
+
 '''Flevolaand''' ([[Nederlaands]]: ''Flevoland'') is een [[Nederlaand]]se [[pervincie|previnsie]] in et midden van et laand. Flevolaand is officieel erkind as previnsie op [[27 juni]] [[1985]]. 
 
 De [[heufdstad|eufdstad]] is [[Lelystad]] (vernuumd nor de bedinker van Flevolaand [[Cornelis Lely]]). De Flevopolder is varder et grootste kunstmaotige eilaand ter wereld. Flevolaand leit zo'n veef meter onger 't zienivo en et 1.419 km² laand en 993 km² [[woater|waoter]] en bestot eut zes gemientes in grinst an et [[Iesselmeer|IJsselmeer]]. 
