--- a/Flevolaand.mw
+++ b/Flevolaand.mw
@@ -30,15 +30,19 @@ Flevolaand grinst in et euterste noorden an Frieslaand in in et noordoosten an O
 Op [[Urk]] wort van oorsprong een [[Nedersaksisch]] dialect espruken, et [[Urkers]], in op [[Skokkelaand]] vroeger ok et [[Skokkers]].
 
 == Gemienten ==
-[[File:GemeentenFlevolandNrs.png|150px|left]]
 
-* 1. [[Almere]]
-* 2. [[Dronten]]
-* 3. [[Lelystad]]
-* 4. [[Noordoostpolder]]
-* 5. [[Urk]]
-* 6. [[Zeewolde]]
-<br/ >
+{| BORDER="0" cellpadding="20"
+|-----
+|
+# [[Almere]]
+# [[Dronten]]
+# [[Lelystad]]
+# [[Noordoostpolder]]
+# [[Urk]]
+# [[Zeewolde]]
+|
+[[Bestaand:GemeentenFlevolandNrs.png|150px|links]]
+|}
 
 ==Zie ok==
 *[[Liest van plaotsen in Flevolaand]]
