--- a/Oaveriessel.mw
+++ b/Oaveriessel.mw
@@ -19,7 +19,8 @@ volksleed = [[Overijssels Volkslied|Aan de rand van Hollands gouwen]]|
 ofbeeldn =  Overijssel position.svg|
 Webstea = [http://www.overijssel.nl www.overijssel.nl] |
 }}
-[[Ofbeelding:2016-P04-Overijssel-o.png|350px|thumb|<center>Oaveriessel</center>]]
+[[Bestaand:Prov-Overijssel-OpenTopo.jpg|thumb|Oaveriessel]]
+
 '''Oaveriessel''' ([[Nederlaands]]: ''Overijssel'') is ne proveensie in t noordoostn van [[Nederlaand]]. De proveensie lig in t oostn van t laand. In t westn ligt [[Flevolaand]], t [[Iesselmeer]], n rivier n [[Iessel]] en de bearge van de [[Veluwe]] in de proveensie [[Gelderlaand]]. In t noordwestn greanst t an [[Frieslaand|Freeslaand]], in t noordn ligt de torfgebeedn van [[Drenthe|Dreante]], in t noordoostn greanst t an [[Nedersaksen|Nedersaksn]] in [[Duutslaand]], in t zuudoostn an [[Noordrien-Westfoaln]] in Duutslaand en in t zuudn lig n [[Achterhook]] in de proveensie [[Gelderlaand]]. Oaveriessel kan wördn verdeeld in n [[Kop van Oaveriessel]], t [[Vechtdal]], [[Sallaand]] en [[Tweante]]. In de proveensie sprekt de leu verschelnde dialektn van t [[Neersassies]].
 
 Plaatsn met stadsrechtn bint: [[Almelo]], [[Blokziel]], [[Dealdn]], [[Dèventer|Deavnter]], [[Deepn]], [[Eanske]], [[Gällemuun|Genemuudn]], [[Goor]], [[Grafhorst|Grafhörst]], [[Grambarge|Gramsbeargn]], [[Hardenbarg (gemiente)|Hardnbearg]], [[Asselt|Hasselt]], [[Kampen (Overiessel)|Kaampn]], [[Oldnzel]], [[Ommen|Omn]], [[Oatmörsken]], [[Riesn]], [[Stienwiek|Steenwiek]], [[Veno|Volnhove]], [[Wilsum]] en [[Zwolle]].
