*Empty MediaWiki Message*

--- a/Gelderlaand.mw
+++ b/Gelderlaand.mw
@@ -19,6 +19,8 @@
 | region         = NL-GE
 | webstee        = http://www.gelderland.nl/
 }}
+[[Bestaand:Prov-Gelderland-OpenTopo.jpg|thumb|Gelderlaand]]
+
 '''Gelderlaand''' ([[Nederlaands]]: {{Audio|Nl-Gelderland.oga|Gelderland}}) is n provinsie in t midden en t oosten van [[Nederlaand]]. t Grenst an zes aandere Nederlaandse provinsies en an Duutslaand: in t noordoosten an [[Oaveriessel|Overiessel]], in t oosten an de [[Duutslaand|Duutse]] [[dailstoat|deelstaot]] [[Noordrhain-Westfele|Noordrien-Westfaolen]], in t zujen an [[Limburg (Nederlaand)|Limburg]] en [[Noord-Braobaant]], in t uterste zuudwesten an [[Zuud-Hollaand]], in t westen an de provinsie [[Utrecht (provinsie)|Utrecht]], in t noordwesten an t [[Veluwemeer]], mit an de overkaante [[Flevolaand]]. De heufstad van de provinsie Gelderlaand is [[Arnem]].
 
 == Geografie ==
@@ -48,7 +50,6 @@ Hieronder vie'j n overzichte van de grootste Gelderse stejen (naor t antal inwoe
 # [[Deutekem]]
 
 == Gemeenten ==
-[[Bestaand:Prov-Gelderland-OpenTopo.jpg|thumb|300px|Provinsie Gelderlaand (2019) mit indeling van gemeenten en impressie van t laandschap.]]
 Der bint in totaal 51 gemeentes.
 
 {|
