--- a/Grunnen_(provìnzie).mw
+++ b/Grunnen_(provìnzie).mw
@@ -20,6 +20,7 @@
 | ofbeelden = Groningen position.svg 
 | webstee = http://www.provinciegroningen.nl
 }}
+[[Bestaand:Prov-Groningen-OpenTopo.jpg|thumb|Grunnen]]
 
 '''Grunnen''' (ook: ''Grönnen'' of verhollaandst ''Grunningen'', [[Frais]]: ''Grinslân'', [[Nederlaands]]: ''Groningen'') is n [[Pervincie|provìnzie]] in t noorden van [[Nederlaand]] mit sikkom 575.000 inwoner en het as [[heufdstad]] mitzulfde noam  [[Grunnen (stad)|Stad Grunnen]].
 
@@ -123,7 +124,6 @@ Wieders is n groot kultureel zentrum van de provìnzie t [[Grunneger Museum]]. D
 t Kultureel aarfgoud en aander zainsweerdegheden as t Naasjonoalpaark [[Laauwersmeer]], de [[Hortus]] in Hoaren en de natuur in [[Westerwoolde (streek)|Westerwolde]] vörmen de belaankriekste rezens veur toeristen om noar de provìnzie Grunnen te kommen. 
 
 == Gemaintes ==
-[[Ofbeelding:Prov-Groningen-OpenTopo.jpg|250px|right|thumb|Gemaintes in Grunnen (2019)]]
 {|
 |
 # [[n Daam]] (''Appingedam'')  
