*Empty MediaWiki Message*

--- a/Utrecht_(provinsie).mw
+++ b/Utrecht_(provinsie).mw
@@ -20,13 +20,14 @@ bevolkensdichtte = 912 |
 volkslaid = [[Langs de Vecht en d'oude Rijnstroom|Langs de Vecht en<br /> d'oude Rijnstroom]] |
 ofbeelden = Utrecht-Position.png |
 webstee = [http://www.provincie-utrecht.nl www.provincie-utrecht.nl] |
-}} 
+}}
+[[Bestaand:Prov-Utrecht-OpenTopo.jpg|thumb|Utrecht]]
+ 
 '''Utrecht''' is met n [[oppervlakte]] van 1.449 km² de kleinste provinsie van [[Nederlaand|Nederlangd]] en t het ongeveer 1,17 miljoen inwoeners. De provinsie Utrecht, waor de minsen t dichtst op mekaor woenen, en dat sentraol leit wort meestal tot de [[Raandstad (gebeed)|Rangdstad]] erekend. De heufdstad is [[Utrecht (stad)|Utrecht]]. Dee stad was t sentrum van t bisdom of [[Sticht Utrecht]], de veurloper van wat nong de provinsie Utrecht is. De tweede grote stad van de provinsie is [[Amersfoort]], de daarde is [['t Veen|t Veen]]. Utrecht leit an de grens met [[Gelderlaand|Gelderlangd]], [[Zuud-Hollaand|Zuud-Hollangd]], [[Noord-Hollaand|Noord-Hollangd]] en [[Flevolaand|Flevolangd]]. 
 
 In de plaotsen [[Bunsjoten]], [[Spaokenburg]], [[Leusden]] en Amersfoort worren oorspronkelik [[West-Veluws]]e en [[Eemlangds]]e dialekten espreuken.
 
 == Gemeenten ==
-[[File:Prov-Utrecht-OpenTopo.jpg|thumb|300px|left|Gemeenten in Utrecht]]
 Overzicht van de Utrechtse gemeenten.
 {|
 |
