--- a/Drenthe.mw
+++ b/Drenthe.mw
@@ -78,7 +78,7 @@ De [[pervincie]] Drenthe bestun oet 35 gemeeinten, mor nao de grootschaolige her
 # [[Westerveld]]
 # [[De Wolden]]
 |
-[[Bestaand:DrentheNumbered.png|300px|links|Gemeeinten in Drenthe]]
+[[Bestaand:DrentheNumbered.png|300px|links]]
 |}
 
 == Bestuur ==
