--- a/Zuud-Hollaand.mw
+++ b/Zuud-Hollaand.mw
@@ -19,12 +19,14 @@ volkslaid = [[Zuud-Hollaans volkslied]] |
 ofbeelden = Zuid_Holland-Position.png |
 webstee = [http://www.zuid-holland.nl www.zuid-holland.nl] |
 }}
+[[Bestaand:Prov-Zuid-Holland-OpenTopo.jpg|thumb|Zuud-Hollaand]]
+[[Bestaand:RMSDeltaNorth.jpg|thumb|Satellietfoto van de [[Rijn]]-[[Maas]]delta, waorop de Zuud-Hollaandse eilanen te zien binnen]]
+
 '''Zuud-Hollaand''' ([[Nederlaands|Nederlaans]]: ''Zuid-Holland'') is een perveensie in West-Nederlaand an de Noordzeekust. Et is ien van de dichtstbevolkte en meest industrialiseerde gebieden in [[Nederland]]. De perveensie is zoe'n 3.403 km² groot. De perveensie het roem 3,5 miljoen inwoners ([[2011]]), waormit Zuud-Holland de bevolkingsriekste perveensie van Nederlaand is. De heufdstad van de perveensie is [[Den Haag]] en de grootste stad is [[Rotterdam]].
 
 Angreenzende perveensies bin [[Zeelaand]] in et zuden, [[Noord-Braobant|Noord-Braobaant]] in et zuudoosten en [[Gelderlaand]] en [[Utrecht (previncie)|Utrecht]] in et oosten. De noordgreens wodt vormd deur de perveensie [[Noord-Hollaand]], waormee Zuud-Hollaand tot de grondwetswieziging van [[1840]] ien perveensie Hollaand vormden. In et westen greenst de perveensie an de [[Noordzee]].
 
 ==Eilanen van Zuud-Hollaand==
-[[Bestaand:RMSDeltaNorth.jpg|thumb|left|250px|Satellietfoto van de [[Rijn]]-[[Maas]]delta, waorop de Zuud-Hollaandse eilanen te zien binnen]]
 Et zudelike gedielte van de perveensie Zuud-Hollaand bestaot uut een antal [[eilaand|eilanen]] die in de [[Rijn]]-[[Maas]]rivierdelta liggen. Alhoewel de eilanen technisch zien omringd wodden deur rivieren, kenaolen of aandere waeteren, bin de meerste eilanen goed mit de rest van de perveensie verbunnen.
 
 De eilanen die tot Zuud-Hollaands beheuren binnen:
@@ -38,7 +40,7 @@ De eilanen die tot Zuud-Hollaands beheuren binnen:
 
 
 == Gemienten ==
-De 60 gemienten van Zuud-Hollaand per 2015:
+De 52 gemienten van Zuud-Hollaand per 2019:
 
 {|
 |
@@ -46,12 +48,10 @@ De 60 gemienten van Zuud-Hollaand per 2015:
 # [[Albraandsweard]] (''Albrandswaard'')
 # [[Alphen an den Rijn (gemeente)|Alphen an den Rijn]] 
 # [[Barendrecht]] 
-# [[Binnenmaas]] 
 # [[Bodegrawen-Reewiek]]<br/ > (''Bodegraven-Reeuwijk'')
 # [[Brielle]] 
 # [[Delft]] 
 # [[Dordrecht]] 
-# [[Giessenlaanden]] (''Giessenlanden'') 
 # [[Goeree-Overflakkee]] 
 # [[Gorkum]] (''Gorinchem'') 
 # [[Gouda]] 
@@ -59,31 +59,27 @@ De 60 gemienten van Zuud-Hollaand per 2015:
 # [[n Heeg]] (''Den Haag'')
 # [[Hellevootsluus]] (''Hellevoetsluis'')
 # [[Hendrik-Ido-Ambacht]] 
-# [[Hillegom]] 
+# [[Hillegom]]
+# [[Hooksen Weard]] (''Hoeksche Waard'') 
 # [[Kaag en Braassem]] 
-# [[Kapelle an den Iessel]]<br/ > (''Capelle aan den IJssel'') 
-|<ol start=21>
+|<ol start=19>
+<li>  [[Kapelle an den Iessel]]<br/ > (''Capelle aan den IJssel'') 
 <li> [[Katwiek]] (''Katwijk'') 
-<li> [[Korendiek]] (''Korendijk'') 
 <li> [[Krimpen an den Iessel]]<br/ > (''Krimpen aan den IJssel'') 
 <li> [[Krimpenerweard]] (''Krimpenerwaard'') 
-<li> [[Kromstrien]] (''Cromstrijen'') 
 <li> [[Laansingerlaand]] (''Lansingerland'') 
 <li> [[Leaderdoarp]] (''Leiderdorp'') 
-<li> [[Leerdam]] 
 <li> [[Leidn]] (''Leiden'') 
 <li> [[Leidschendam-Veurburg]]<br/ > (''Leidschendam-Voorburg'') 
 <li> [[Lisse]] 
 <li> [[Maassloes]] (''Maassluis'') 
 <li> [[Midden-Delflaand]] (''Midden-Delfland'') 
-<li> [[Möllenweard]] (''Molenwaard'') 
+<li> [[Möllenlaanden]] (''Molenlanden'') 
 <li> [[Ni'jkoop]] (''Nieuwkoop'') 
 <li> [[Nisseweard]] (''Nissewaard'') 
 <li> [[Noordwiek]] (''Noordwijk'') 
-<li> [[Noordwiekerholt]] (''Noordwijkerhout'') 
 <li> [[Oegstgeest]] 
-<li> [[Oold-Beierlaand (gemeente)|Oold-Beierlaand]] (''Oud-Beijerland'') 
-|<ol start=41>
+|<ol start=35>
 <li> [[Pienakker-Nootdoarp]]<br/ > (''Pijnacker-Nootdorp'') 
 <li> [[Poapendrecht]] (''Papendrecht'') 
 <li> [[Ridderkarke]] (''Ridderkerk'') 
@@ -91,7 +87,6 @@ De 60 gemienten van Zuud-Hollaand per 2015:
 <li> [[Rotterdam (gemeente)|Rotterdam]] 
 <li> [[Skiedam]] (''Schiedam'') 
 <li> [[Sliedrecht (gemeente)|Sliedrecht]] 
-<li> [[Strien]] (''Strijen'') 
 <li> [[Teylingen]] 
 <li> [[Veurschoten]] (''Voorschoten'') 
 <li> [[Vlaardingen]] 
@@ -99,7 +94,6 @@ De 60 gemienten van Zuud-Hollaand per 2015:
 <li> [[Wassenaar]] 
 <li> [[Westlaand (gemeente)|Westlaand]] (''Westland'') 
 <li> [[Westvoorne]] 
-<li> [[Zederik]] 
 <li> [[Zeutermear]] (''Zoetermeer'') 
 <li> [[Zeuterwolde]] (''Zoeterwoude'') 
 <li> [[Zuudplas]] (''Zuidplas'') 
