--- a/Limburg_(Nederlaand).mw
+++ b/Limburg_(Nederlaand).mw
@@ -48,9 +48,9 @@ Limburg bestiet uut 14 plaotsen mit stadsrechten.
 {| 
 |-
 |
+# [[Baek (gemeente)|Baek]] (''Beek'')
+# [[Baekdaelen]] (''Beekdaelen'')
 # [[Bargen (Limburg)|Bargen]] (''Bergen'')
-# [[Baek (gemeente)|Beek]]
-# [[Beekdaelen]]
 # [[Beesel]]
 # [[Brunssem]]
 # [[Echt-Susteren]]
@@ -75,9 +75,9 @@ Limburg bestiet uut 14 plaotsen mit stadsrechten.
 <li> [[Sittard-Geleen]]
 <li> [[Stein]]
 <li> [[Valkenburg an de Geul]] (''Valkenburg aan de Geul'')
+<li> [[Vaols]] (''Vaals'')
 <li> [[Venlo]]
 <li> [[Venray]]
-<li> [[Vaols]] (''Vaals'')
 <li> [[Voerendaal]]
 <li> [[Weert]]
 |}
