--- a/Dongerediel.mw
+++ b/Dongerediel.mw
@@ -18,7 +18,7 @@ netnummer = 0519 |
 postkode = 9101 - 9156 |
 webstee = [http://www.dongeradeel.nl www.dongeradeel.nl] |
 }}
-'''Dongerediel''' ([[Nederlaands|Nederlaans]]: ''Dongeradeel'', [[Freesk|Fries]]: ''Dongeradiel'') is een [[Frieslaand|Friese]] gemiente mit 24.097 inwoners<ref>Per 1 meie 2014, bron: Centraal Bureau voor de Statistiek</ref> en een oppervlakte van 266,92 [[Vierkaante kilometer|km²]].
+'''Dongerediel''' ([[Nederlaands|Nederlaans]]: ''Dongeradeel'', [[Freesk|Fries]]: ''Dongeradiel'') is een [[Frieslaand|Friese]] vroggere gemiente mit 24.097 inwoners<ref>Per 1 meie 2014, bron: Centraal Bureau voor de Statistiek</ref> en een oppervlakte van 266,92 [[Vierkaante kilometer|km²]].
 
 Dongerediel is elegen in et noordoosten van de perveensie mit as heufdplak [[Dokkum]], de noordelikste stad van de [[Friese elf steden]].
 
@@ -99,6 +99,6 @@ Paesens en Moddergat wodden deurgaons as ien gehiel beschouwd.
 
 == Referenties ==
 <references />
-{{Frieslaand}}
+
 [[Kategorie:Stellingwarfs artikel]]
-[[Kategorie:Gemiente in Frieslaand]]
+[[Kategorie:Vroggere gemiente in Frieslaand]]
