--- a/Ferwerderediel.mw
+++ b/Ferwerderediel.mw
@@ -18,7 +18,7 @@ netnummer = 0518, 0519, 058 |
 postkode = 9071 - 9179 |
 webstee = [http://www.ferwerderadiel.nl www.ferwerderadiel.nl] |
 }}
-'''Ferwerderediel''' ([[Nederlaands|Nederlaans]]: ''Ferwerderadeel'', [[Freesk|Fries]]: ''Ferwerderadiel'') is een [[Frieslaand|Friese]] gemiente mit 8.755 inwoners (op 1 meie 2014, bron: CBS) en een oppervlakte van 133,18 km².
+'''Ferwerderediel''' ([[Nederlaands|Nederlaans]]: ''Ferwerderadeel'', [[Freesk|Fries]]: ''Ferwerderadiel'') is een [[Frieslaand|Friese]] vroggere gemiente mit 8.755 inwoners (op 1 meie 2014, bron: CBS) en een oppervlakte van 133,18 km².
 
 De gemiente leit an de [[Waddenzee]] en het 10,1 kilemeter kust. Sund 1999 is de officiële naeme van de gemiente et Friestaelige ''Ferwerderadiel''.
 
@@ -71,6 +71,6 @@ Bartlehiem leit gedieltelik in de gmientes [[Liwwadderediel]] en [[Tietjerkstere
 
 == Uutgaonde verwiezing ==
 * [http://www.ferwerderadiel.nl Webstee van de gemiente]
-{{Frieslaand}}
+
 [[Kategorie:Stellingwarfs artikel]]
-[[Kategorie:Gemiente in Frieslaand]]
+[[Kategorie:Vroggere gemiente in Frieslaand]]
